[Picture in Picture] Avoid letterboxing when PiPing new videos.

Currently, switching between videos in Picture-in-Picture mode sometimes
causes letterboxing or pillarboxing, depending on the aspect ratio.

This will size the window to adhere to the updated aspect ratio rather
than immediately letterboxing the video.

Future polish to be done in follow up patches.

Bug: 864394
Change-Id: Ie0956f2b42c46207cc4f8af371755eee76e5c3c3
Reviewed-on: https://chromium-review.googlesource.com/1157523
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: apacible <apacible@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582028}
Former-commit-id: 439c480b40ce6b611b043a2f73c326813e1447e3